<resources>
    <string name="app_name" translatable="false">WhatAppClone</string>
    <string name="zego_app_id" translatable="false">482485447</string>
    <string name="zego_app_sign" translatable="false">595ce14b1d7b11d10f2f433d95517c88466adea9a27bf7ee9313fada1344ae61</string>
    <string name="LBL_NEW_GROUP">New Group</string>
    <string name="LBL_NEW_BROADCAST">New broadcast</string>
    <string name="LBL_SETTINGS">Settings</string>
    <string name="LBL_PROFILE">Profile</string>
    <string name="logout">Logout</string>
    <string name="app_language">App Language</string>
    <string name="choose_region">Choose Region</string>
    <string name="search_country_name_code">Search country name, code</string>
    <string name="result_not_found">Result Not Found</string>
    <string name="are_you_sure_want_to_logout_you_account">Are you sure want to logout you account ?</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="images">Images</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="title">Title</string>
    <string name="your_account_is_removed_please_create_your_account_again">Your account is removed please create your account again</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="save">Save</string>
    <string name="account">Account</string>
    <string name="security_notifications">Security notifications</string>
    <string name="tow_step_verification">Tow-step verification</string>
    <string name="change_number">Change Number</string>
    <string name="request_account_info">Request account info</string>
    <string name="delete_account">Delete account</string>
    <string name="type_a_status">Type a status</string>
    <string name="create_call_link">Create call link</string>
    <string name="share_a_link_for_you_whatsapp_call">Share a link for you Whatsapp call</string>
    <string name="recent">Recent</string>
    <string name="user">User</string>
    <string name="offline">offline</string>
    <string name="message">Message</string>
    <string name="chats">Chats</string>
    <string name="display">Display</string>
    <string name="theme">Theme</string>
    <string name="system_default">System default</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="chat_settings">Chat settings</string>
    <string name="enter_is_send">Enter is send</string>
    <string name="enter_key_weill_send_your_message">Enter key weill send your message</string>
    <string name="media_visibility">Media visibility</string>
    <string name="show_newly_downloaded_media_in_your_device_s_gallery">Show newly downloaded media in your device\'s gallery</string>
    <string name="instant_video_message">Instant video message</string>
    <string name="lets_you_tap_switch_between_using_voice_and_video_messages">Lets you tap switch between using voice and video messages</string>
    <string name="font_size">Font size</string>
    <string name="small">Small</string>
    <string name="archived">Archived</string>
    <string name="keep_chats_archived">Keep chats archived</string>
    <string name="archived_chats_will_remain_archived_when_you_received_a_new_message">Archived chats will remain archived when you received a new message</string>
    <string name="chat_backup">Chat backup</string>
    <string name="transfer_chats">Transfer chats</string>
    <string name="chats_history">Chats history</string>
    <string name="stay_connected_with_a_community">Stay connected with a community</string>
    <string name="communities_bring_members_together_in_topic_based_groups_and_make_it_easy_to_get_admin_announcements_any_community_you_re_added_to_will_appear_here">Communities bring members together in topic-based groups, and make it easy to get admin announcements. any community you\'re added to will appear here.</string>
    <string name="see_example_communities">See example communities</string>
    <string name="start_your_community">Start your community</string>
    <string name="select_contact">Select contact</string>
    <string name="_99_contacts">99 contacts</string>
    <string name="search">Search</string>
    <string name="new_group">New group</string>
    <string name="group_name_optional">Group name (optional)</string>
    <string name="disappearing_messages">Disappearing messages</string>
    <string name="off">off</string>
    <string name="group_permissions">Group Permissions</string>
    <string name="participants">Participants:</string>
    <string name="help">Help</string>
    <string name="help_center">Help Center</string>
    <string name="contact_us">Contact us</string>
    <string name="questions_need_help">Questions? Need help?</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="app_info">App info</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="share_link">Share link</string>
    <string name="from_contacts">From Contacts</string>
    <string name="no_contacts_found">No contacts found</string>
    <string name="verify_your_nphone_number">Verify Your \nPhone Number</string>
    <string name="we_will_send_you_one_time_password_on_your_phone">We will send you One Time Password on your phone</string>
    <string name="_91">+91</string>
    <string name="enter_number">phone number</string>
    <string name="next">Next</string>
    <string name="profile">Profile</string>
    <string name="add_participants">Add participants</string>
    <string name="only_contacts_with_91_99999_88888_in_their_address_book_will_receive_your_broadcast_messages">Only contacts with +91 99999 88888 in their address book will receive your broadcast messages.</string>
    <string name="notification">Notification</string>
    <string name="enter_key_will_send_your_message">Enter key will send your message</string>
    <string name="notification_tone">Notification tone</string>
    <string name="notification_000">notification_000</string>
    <string name="vibrate">Vibrate</string>
    <string name="LBL_DEFAULT">Default</string>
    <string name="light">Light</string>
    <string name="white">White</string>
    <string name="use_high_priority_notifications">Use high priority notifications</string>
    <string name="show_previews_of_notification_at_the_top_of_screen">Show previews of notification at the top of screen</string>
    <string name="reaction_notification">Reaction Notification</string>
    <string name="show_notification_for_reaction_to_message_you_send">Show notification for reaction to message you send</string>
    <string name="groups">Groups</string>
    <string name="calls">Calls</string>
    <string name="ringtone">Ringtone</string>
    <string name="default_calm">Default (Calm)</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="you_will_get_otp_via_sms">You will get OTP via SMS</string>
    <string name="verify">Verify</string>
    <string name="resend_otp_in_00_60_sec">Resend otp in 00:60 sec</string>
    <string name="name">name</string>
    <string name="calling">Calling...</string>
    <string name="privacy">Privacy</string>
    <string name="who_can_see_my_personal_info">Who can see my personal info</string>
    <string name="last_seen_and_online">Last seen and online</string>
    <string name="my_contacts_everyone">My contacts, Everyone</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="everyone">Everyone</string>
    <string name="about">About</string>
    <string name="nobody">Nobody</string>
    <string name="read_receipts">Read receipts</string>
    <string name="if_tuned_off_you_won_t_send_or_receive_read_receipts_read_receipt_are_always_sent_for_group_chats">If tuned off, you won\'t send or receive Read receipts, Read receipt are always sent for group chats.</string>
    <string name="disappearing_messages_timer">Disappearing messages timer</string>
    <string name="start_new_chats_with_disappearing_messages_set_to_your_timer">Start new chats with disappearing messages set to your timer</string>
    <string name="live_location">Live location</string>
    <string name="none">none</string>
    <string name="silence_unknown_caller">Silence unknown caller</string>
    <string name="blocked_contacts">Blocked contacts</string>
    <string name="_150">150</string>
    <string name="fingerprint_lock">Fingerprint lock</string>
    <string name="disabled">Disabled</string>
    <string name="profile_info">Profile Info</string>
    <string name="please_provide_your_name_and_profile_photo">Please provide your name and profile photo</string>
    <string name="type_you_name_here">Type you name here</string>
    <string name="settings">Settings</string>
    <string name="no_settings_search_result_found">No settings search result found</string>
    <string name="status">Status</string>
    <string name="my_status">My Status</string>
    <string name="tap_to_add_status_update">Tap to add status update</string>
    <string name="recent_updates">Recent updates</string>
    <string name="viewed_updates">Viewed updates</string>
    <string name="storage_and_data">Storage and data</string>
    <string name="manage_storage">Manage storage</string>
    <string name="_1_5_gb">1.5 GB</string>
    <string name="network_usage">Network usage</string>
    <string name="_8_5_gb_sent_2_5_gb_received">8.5 GB sent - 2.5 GB received</string>
    <string name="use_less_data_for_calls">Use less data for calls</string>
    <string name="proxy">Proxy</string>
    <string name="media_auto_download">Media auto-download</string>
    <string name="voice_messages_are_always_automatically_downloaded">Voice messages are always automatically downloaded</string>
    <string name="when_using_mobile_data">When using mobile data</string>
    <string name="no_media">No media</string>
    <string name="when_connected_on_wi_fi">When connected on Wi-Fi</string>
    <string name="when_roaming">When roaming</string>
    <string name="yesterday">yesterday</string>
    <string name="sk">sk</string>
    <string name="this_is_not_your_username_or_pin_this_name_will_be_visible_to_your_whatsapp_contacts">This is not your username or pin. This name will be visible to your WhatsApp contacts.</string>
    <string name="phone">Phone</string>
    <string name="_91_99999_88888">+91 99999 88888</string>
    <string name="user_name">User name</string>
    <string name="_9_00_am">9:00 am</string>
    <string name="tap_to_chat">Tap to chat</string>
    <string name="invite">Invite</string>
    <string name="india">India</string>
    <string name="radio_item">Radio Item</string>
    <string name="file_name_mp3">file name.mp3</string>
    <string name="hello">hello</string>
    <string name="updates">Updates</string>
    <string name="security_notification_change_number">Security notification, change number</string>
    <string name="block_contacts_disappearing_messages">Block contacts, disappearing messages</string>
    <string name="theme_wallpapers_chat_history">Theme, wallpapers, chat history</string>
    <string name="message_group_and_call_tones">Message, group, &amp; call tones</string>
    <string name="network_usage_auto_download">Network Usage, auto-download</string>
    <string name="devices_language">(device\'s language)</string>
    <string name="help_center_contact_us_privacy_policy">Help center, contact us, privacy policy</string>
    <string name="whastapp" translatable="false">WhatsApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channels">Channels</string>
    <string name="stay_updated_on_topics_that_matter_to_you_find_channels_to_follow_below">Stay updated on topics that matter to you. Find channels to follow below.</string>
</resources>