<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolBarTop"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/tool_bar"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/toolbar_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_arrow_back"
                android:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/toolbar_back"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/toolbar_name"
                    style="@style/TextStyle_Medium_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/toolbar_image"
                    app:layout_constraintStart_toEndOf="@id/toolbar_image"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextStyle_Medium_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_16"
                    android:text="@string/who_can_see_my_personal_info"
                    android:textColor="@color/text_gray" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/dimen_16"
                    android:paddingBottom="@dimen/dimen_16">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/last_seen_and_online" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/my_contacts_everyone"
                        android:textColor="@color/text_gray" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/dimen_16"
                    android:paddingVertical="@dimen/dimen_16">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_photo" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/everyone"
                        android:textColor="@color/text_gray" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/dimen_16"
                    android:paddingVertical="@dimen/dimen_16">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nobody"
                        android:textColor="@color/text_gray" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/dimen_16"
                    android:paddingVertical="@dimen/dimen_16">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/read_receipts" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/if_tuned_off_you_won_t_send_or_receive_read_receipts_read_receipt_are_always_sent_for_group_chats"
                        android:textColor="@color/text_gray" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextStyle_Medium_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_16"
                    android:text="@string/disappearing_messages"
                    android:textColor="@color/text_gray" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/dimen_16"
                    android:paddingBottom="@dimen/dimen_16">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dimen_10"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextStyle_Regular_14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/disappearing_messages_timer" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/TextStyle_Regular_12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/start_new_chats_with_disappearing_messages_set_to_your_timer"
                            android:textColor="@color/text_gray" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivSwitch"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_switch_on"
                        android:tint="@color/green_100" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/dimen_16"
                    android:paddingVertical="@dimen/dimen_16">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/groups" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/everyone"
                        android:textColor="@color/text_gray" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/dimen_16"
                    android:paddingVertical="@dimen/dimen_16">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/live_location" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/none"
                        android:textColor="@color/text_gray" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/dimen_16"
                    android:paddingVertical="@dimen/dimen_16">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/calls" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/silence_unknown_caller"
                        android:textColor="@color/text_gray" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/dimen_16"
                    android:paddingVertical="@dimen/dimen_16">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/blocked_contacts" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_150"
                        android:textColor="@color/text_gray" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/dimen_16"
                    android:paddingVertical="@dimen/dimen_16">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fingerprint_lock" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextStyle_Regular_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/disabled"
                        android:textColor="@color/text_gray" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>